--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -22,8 +22,13 @@ pt-BR:
       confirm_link_html: 'Para você começar a usar o site, acesse o
         link: %{link}'
       thanks_html: 'Obrigado por se cadastrar no %{link}.'
-
-      
+  user_sessions:
+    new:
+      title: 'Login'
+      sign_up: 'Cadastre-se'
+  flash:
+    notice:
+      signed_in: "Logado com sucesso"
   links:
     back: Voltar
   layout:
@@ -47,3 +52,15 @@ pt-BR:
         description: Descrição
         location: Localização
         title: Título
+      activemodel:
+        attributes:
+          user_session:
+            email: Email
+            password: Senha
+        errors:
+          messages:
+            invalid_login: 'Usuário ou senha inválidos'
+      helpers:
+        submit:
+          user_session:
+            create: 'Entrar'
